welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:18: error: not found: value cpt
		cpt= cpt+ 1
                ^